--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>BEN's story</strong></a>
 						<nav>
-							<a href="#menu">回首頁</a>
+							<a href="#menu">回首頁123</a>
 						</nav>
 					</header>
 
