--- a/人物畫.html
+++ b/人物畫.html
@@ -157,7 +157,7 @@
 											<input type="text" name="name" id="name" />
 										</div>
 										<div class="field half">
-											<label for="email">Ema2121212il</label>
+											<label for="email">Email</label>
 											<input type="text" name="email" id="email" />
 										</div>
 										<div class="field">
