--- a/html5up-big-picture/index.html
+++ b/html5up-big-picture/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>我的色鉛作品</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
@@ -34,8 +34,8 @@
 					<header>
 						<h2>Hey.</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>Welcome to <strong>我的色鉛作品區</strong> 小小的夢想實現,沉靜在畫畫的空間中 <a href="https://html5up.net">Ben</a><br />
+					 <a href="https://html5up.net/license">Creative Commons dream</a>.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
