--- a/人物畫/index.html
+++ b/人物畫/index.html
@@ -47,7 +47,7 @@
 							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="../images/pp1.jpg"><img src="../images/pp1.jpg" alt="" /></a>
+							<a class="thumbnail" href="../images/pph.jpg"><img src="../images/pph.jpg" alt="" /></a>
 							<h2>Donec maximus nisi eget</h2>
 							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
 						</article>
