--- a/人物畫/index.html
+++ b/人物畫/index.html
@@ -82,7 +82,7 @@
 							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="../images/pp24.jpg"><img src="../images/pp24.jpg" alt="" /></a>
+							<a class="thumbnail" href="../images/PP雨天.jpg"><img src="../images/PP雨天.jpg" alt="" /></a>
 							<h2>Pharetra ex non faucibus</h2>
 							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
 						</article>
