--- a/人物畫.html
+++ b/人物畫.html
@@ -90,7 +90,7 @@
 											<header class="major">
 												<h3>蔡依林</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>獲獎無數的蔡依林，風光在人前，但許多人沒看到的是，她背後的努力，而推進她不斷向前超越自我的</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
