--- a/人物畫.html
+++ b/人物畫.html
@@ -125,7 +125,7 @@
 											<header class="major">
 												<h3>貝多芬</h3>
 											</header>
-											<p>第一次畫石膏像,還蠻挑戰的,許多科班出身的朋友應該都靠石膏像練就一身好功夫,辛苦了!!/p>
+											<p>第一次畫石膏像,還蠻挑戰的,許多科班出身的朋友應該都靠石膏像練就一身好功夫,辛苦了!!</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
