--- a/精選.html
+++ b/精選.html
@@ -90,7 +90,7 @@
 											<header class="major">
 												<h3>Q版小童2023.4.4</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>兒童節前看到這張圖讓我莞爾一笑,讓我在這段時間因為家中變故時的紛亂心情稍稍緩解,其實這張圖對我的意義還蠻重要的,壓力釋放</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -106,7 +106,7 @@
 											<header class="major">
 												<h3>王靜</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>新生代我近期非常喜歡的女演員,從看到她和范少勳演出的《比悲傷更悲傷的故事》戲劇中開始注意到她,連追了幾步她的戲,也畫了幾張她的人像畫</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -122,7 +122,7 @@
 											<header class="major">
 												<h3>章子怡</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>這位國際型演員,相信我就不用多介紹了,因為這張圖的五官相當平均,要畫這張圖的比例就很重要,很開心在放上繪圖群組後能得到2200個案讚數,感恩啊!!</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
