--- a/人物畫.html
+++ b/人物畫.html
@@ -106,8 +106,8 @@
 											<header class="major">
 												<h3>范少勳</h3>
 											</header>
-											<p>台灣新生代男演員、男模特兒，2012年以演出偶像劇《課間好時光一年二班》出道,這張圖是《比悲傷更悲傷的故事》中的演出吸引到我
-												之後追了《四樓的天堂》《模仿犯》等劇,覺得他演得很讚
+											<p>臨摹喜怒愛樂表情之一,這張圖是范少勳在演出《比悲傷更悲傷的故事》中深刻悲痛的表情畫下來,
+												之後追了他《四樓的天堂》《模仿犯》等劇,覺得他演得很讚
 
 										</p>
 											<ul class="actions">
