--- a/精選.html
+++ b/精選.html
@@ -104,9 +104,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>王靜</h3>
+												<h3>王淨</h3>
 											</header>
-											<p>新生代我近期非常喜歡的女演員,從看到她和范少勳演出的《比悲傷更悲傷的故事》戲劇中開始注意到她,連追了幾步她的戲,也畫了幾張她的人像畫</p>
+											<p>新生代我近期非常喜歡的女演員,從看到她和范少勳演出的《比悲傷更悲傷的故事》戲劇中開始注意到她,連追了幾部她的戲,也畫了幾張她的人像畫</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
