--- a/人物畫.html
+++ b/人物畫.html
@@ -138,9 +138,11 @@
 							<section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>備註補充說明</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>平時看網路照片的重點,反而是留意某些素材帶給我的吸引力,雖然難免吸引到我的人像多為女照,但也畫了不少男帥哥和可愛的小朋友啦!!一切都看和素材的緣分,這陣子的事情較多,畫的不像前陣子頻繁,但只要提起筆,就有一股不畫完不休息的熱情
+
+									</p>
 									<ul class="actions">
 										<li><a href="人物畫/index.html" class="button next">前往相簿</a></li>
 									</ul>
