--- a/色鉛筆.html
+++ b/色鉛筆.html
@@ -47,8 +47,8 @@
 							<div class="banner0">
 								<div class="banner1">
 									<img src="images/cpbird.jpg" alt="" />
-									<img src="images/cp.JPG" alt="" />
-									<img src="images/cpdog.JPG" alt="" />
+									<img src="images/cp.jpg" alt="" />
+									<img src="images/cpdog.jpg" alt="" />
 								</div>
 								<div class="banner2">
 									<img src="images/cptiger.jpg" alt="" />
