--- a/色鉛筆.html
+++ b/色鉛筆.html
@@ -48,7 +48,7 @@
 								<div class="banner1">
 									<img src="images/cpbird.jpg" alt="" />
 									<img src="images/cp.jpg" alt="" />
-									<img src="images/cpdog.jpg" alt="" />
+									<img src="images/cpdog.JPG" alt="" />
 								</div>
 								<div class="banner2">
 									<img src="images/cptiger.jpg" alt="" />
