--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							<div class="content">
 								<p>個人自學素描及色鉛作品<br/>
 								2021.12~<br/>
-								開放委託接案:<br/>
-								歡迎來電:0920419109陳先生</p>
+								<br/>
+								歡迎聯絡:0920419109陳先生</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">故事開始</a></li>
 								</ul>
