--- a/履歷設計/index.html
+++ b/履歷設計/index.html
@@ -81,15 +81,15 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">yoyokindlife1@gmail.com</div>
+              <div class="col-sm-8">1111</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">0920-419-109</div>
+              <div class="col-sm-8">2222</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">板橋</div>
+              <div class="col-sm-8">3333</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
