--- a/履歷設計/index.html
+++ b/履歷設計/index.html
@@ -56,7 +56,7 @@
       <div class="section">
         <div class="container">
           <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
-            
+            <!-- <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a> -->
             <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
         </div>
@@ -70,33 +70,57 @@
       <div class="row">
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.</p>
-            <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-12">
-          <div class="card-body">
-            <div class="h4 mt-0 title">Basic Information</div>
+            <div class="h4 mt-0 title">個人資訊</div>
             <div class="row">
-              <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">47</div>
+              <div class="col-sm-4"><strong class="text-uppercase">年資:</strong></div>
+              <div class="col-sm-8">20</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">1111</div>
+              <div class="col-sm-8">yoyo</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">2222</div>
+              <div class="col-sm-4"><strong class="text-uppercase">電話:</strong></div>
+              <div class="col-sm-8">0920</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">3333</div>
+              <div class="col-sm-4"><strong class="text-uppercase">地址:</strong></div>
+              <div class="col-sm-8">台北</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8">中文</div>
+              <div class="col-sm-4"><strong class="text-uppercase">專長:</strong></div>
+              <div class="col-sm-8">繪圖</div>
+            </div>
+          </div>
+          <!-- <div class="col-lg-6 col-md-12"></div> -->
+          <!-- <div class="card-body">
+            <div class="h4 mt-0 title">About</div>
+            <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.</p>
+            <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
+          </div> -->
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <div class="card-body">
+            <div class="h4 mt-0 title">&nbsp;</div>
+            <!-- <div class="row">
+              <div class="col-sm-4"><strong class="text-uppercase">:</strong></div>
+              <div class="col-sm-8">47</div>
+            </div> -->
+            <div class="row mt-3">
+              <div class="col-sm-4"><strong class="text-uppercase">語言:</strong></div>
+              <div class="col-sm-8">中英文</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-sm-4"><strong class="text-uppercase">國籍:</strong></div>
+              <div class="col-sm-8">台灣</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-sm-4"><strong class="text-uppercase">學歷:</strong></div>
+              <div class="col-sm-8">大學</div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-sm-4"><strong class="text-uppercase">其他:</strong></div>
+              <div class="col-sm-8">略</div>
             </div>
           </div>
         </div>
@@ -396,12 +420,25 @@
             <div class="h5">Science and Mathematics</div>
             <p class="category">School of Secondary board</p>
             <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
-          </div>
-        </div>
+          </div>     
       </div>
     </div>
   </div>
 </div>
+<div class="section" id="about">
+  <div class="container">
+    <div class="h4 mb-4 text-center title">About</div>
+    <div class="card" data-aos="fade-up" data-aos-offset="10">
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
+        <div class="card-body">
+          <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.</p>
+          <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
+        </div>
+        </div>
+      </div>
+    </div></div></div>
+
 <div class="section" id="reference">
   <div class="container cc-reference">
     <div class="h4 mb-4 text-center title">References</div>
