--- a/履歷設計/index.html
+++ b/履歷設計/index.html
@@ -280,7 +280,7 @@
       <div class="tab-pane" id="Photography" role="tabpanel">
         <div class="ml-auto mr-auto">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
                   <figure class="cc-effect"><img src="images/pp32.jpg" alt="Image"/>
                     <figcaption>
@@ -295,8 +295,38 @@
                       <p>Graphic Design</p>
                     </figcaption>
                   </figure></a></div>
+                  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                    <figure class="cc-effect"><img src="images/pp10.jpg" alt="Image"/>
+                      <figcaption>
+                        <div class="h4">Triangle Pattern</div>
+                        <p>Graphic Design</p>
+                      </figcaption>
+                    </figure></a></div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                  <figure class="cc-effect"><img src="images/pp22.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Triangle Pattern</div>
+                      <p>Graphic Design</p>
+                    </figcaption>
+                  </figure></a></div>
+                  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                    <figure class="cc-effect"><img src="images/pp12.jpg" alt="Image"/>
+                      <figcaption>
+                        <div class="h4">Triangle Pattern</div>
+                        <p>Graphic Design</p>
+                      </figcaption>
+                    </figure></a></div>
+                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                      <figure class="cc-effect"><img src="images/pp30.jpg" alt="Image"/>
+                        <figcaption>
+                          <div class="h4">Triangle Pattern</div>
+                          <p>Graphic Design</p>
+                        </figcaption>
+                      </figure></a></div>
+            </div>
+            <div class="col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
                   <figure class="cc-effect"><img src="images/pp20.jpg" alt="Image"/>
                     <figcaption>
@@ -311,6 +341,13 @@
                       <p>Graphic Design</p>
                     </figcaption>
                   </figure></a></div>
+                  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                    <figure class="cc-effect"><img src="images/pp16.jpg" alt="Image"/>
+                      <figcaption>
+                        <div class="h4">Triangle Pattern</div>
+                        <p>Graphic Design</p>
+                      </figcaption>
+                    </figure></a></div>
             </div>
           </div>
         </div>
