--- a/履歷設計/index.html
+++ b/履歷設計/index.html
@@ -33,6 +33,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">專長</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">作品</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">工作經歷</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#my">關於自己...</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">聯絡我</a></li>
               </ul>
             </div>
@@ -505,9 +506,9 @@
     </div>
   </div>
 </div>
-<div class="section" id="about">
+<div class="section" id="my">
   <div class="container">
-    <div class="h4 mb-4 text-center title">About</div>
+    <div class="h4 mb-4 text-center title">關於自己...</div>
     <div class="card" data-aos="fade-up" data-aos-offset="10">
       <div class="row">
         <div class="col-lg-6 col-md-12">
@@ -521,7 +522,7 @@
 
 <div class="section" id="reference">
   <div class="container cc-reference">
-    <div class="h4 mb-4 text-center title">References</div>
+    <div class="h4 mb-4 text-center title">推薦人</div>
     <div class="card" data-aos="zoom-in">
       <div class="carousel slide" id="cc-Indicators" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -532,7 +533,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-1.jpg" alt="Image"/>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/pp29.jpg" alt="Image"/>
                 <div class="h5 pt-2">Aiyana</div>
                 <p class="category">CEO / WEBM</p>
               </div>
@@ -543,7 +544,7 @@
           </div>
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-2.jpg" alt="Image"/>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/pp29.jpg" alt="Image"/>
                 <div class="h5 pt-2">Braiden</div>
                 <p class="category">CEO / Creativem</p>
               </div>
@@ -554,7 +555,7 @@
           </div>
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-3.jpg" alt="Image"/>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/pp29.jpg" alt="Image"/>
                 <div class="h5 pt-2">Alexander</div>
                 <p class="category">CEO / Webnote</p>
               </div>
@@ -569,13 +570,13 @@
   </div>
 </div>
 <div class="section" id="contact">
-  <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
+  <div class="cc-contact-information" style="background-image: url('images/map.png')">
     <div class="container">
       <div class="cc-contact">
         <div class="row">
           <div class="col-md-9">
             <div class="card mb-0" data-aos="zoom-in">
-              <div class="h4 text-center title">Contact Me</div>
+              <div class="h4 text-center title">聯絡我</div>
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
@@ -611,7 +612,7 @@
                       </div>
                       <div class="row">
                         <div class="col">
-                          <button class="btn btn-primary" type="submit">Send</button>
+                          <button class="btn btn-primary" type="submit">寄送</button>
                         </div>
                       </div>
                     </form>
@@ -619,12 +620,12 @@
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
-                    <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">140, City Center, New York, U.S.A</p>
-                    <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+1718-111-0011</p>
+                    <p class="mb-0"><strong>地址 </strong></p>
+                    <p class="pb-2">220, Banqiao,City Center, Taipei</p>
+                    <p class="mb-0"><strong>電話</strong></p>
+                    <p class="pb-2">+886</p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>anthony@company.com</p>
+                    <p>yoyokind.com</p>
                   </div>
                 </div>
               </div>
@@ -638,9 +639,9 @@
     </div>
     <footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
-      <div class="h4 title text-center">Anthony Barnett</div>
+      <div class="h4 title text-center">Ben</div>
       <div class="text-center text-muted">
-        <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
+        <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://Benchenchang.github.io" target="_blank"></a></p>
       </div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
